# groundwork

./: .env.example  .gitignore  AGENTS.md  ARCH.md  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  TASKS.md  issues.md  pyproject.toml  schema.sql
.claude/: settings.json
.claude/commands/: collect.md  enrich.md  install.md  start.md  status.md
.claude/hooks/: protect-files.sh
.claude/skills/implement-plan/: SKILL.md
.context/: SCORING_INTENT.md  activeContext.md  progress.md  systemPatterns.md  techContext.md
.cursor/rules/: collect.mdc  standards.mdc
.cursor/skills/linkedin-enrich/: SKILL.md
.github/workflows/: test.yml
docs/research/: chatgpt-conversation.md  deep-research-report.md
plugins/groundwork/: SKILL.md  index.ts  openclaw.plugin.json
plugins/nanoclaw-groundwork/: SKILL.md
scripts/: auto-merge.sh  collect-sources.py  enrich-linkedin.py  export-csv.sh  finalize-run.sql  import-connections.sh  import-sources.py  init-db.sh  merge-people.sh  notify-run.py  parse-source.py  preflight.sh  process-run.sh  resolve-sightings.sql  run-collect.sh  save-linkedin-batch.py  save-linkedin.sh  server.py  setup-auth.py  setup-auth.sh  setup.sh  status.sh  test-pipeline.sh  update-people.sql  validate-linkedin-url.py
scripts/providers/: __init__.py  direct_provider.py  linkedin_direct.py  mcp_provider.py
tests/: new-user-checklist.md  setup.sh  verify-agent.sh  verify.sh
tests/fixtures/: lc_calendar.txt  lc_gmail.txt  lc_slack.txt
viewer/: index.html
